--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "npm run dev"
+    "start": "npm run dev",
+    "deploy": "npm run build"
   },
   "keywords": ["spa", "massage", "website", "responsive", "single-page-application"],
   "author": "",
