--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,10 @@ jobs:
       contents: read
       pages: write
       id-token: write
+
+    environment:
+      name: github-pages    # 👈 REQUIRED for Pages deployment
+      url: ${{ steps.deployment.outputs.page_url }}
     
     steps:
     - name: Checkout
