--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,6 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
   build-and-deploy:
@@ -16,7 +14,7 @@ jobs:
       id-token: write
 
     environment:
-      name: github-pages    # 👈 REQUIRED for Pages deployment
+      name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     
     steps:
@@ -53,7 +51,7 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
       with:
-        path: './dist'
+        path: ${{ steps.detect-output.outputs.path }}
         
     - name: Deploy to GitHub Pages
       id: deployment
