--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,9 +48,15 @@ jobs:
           exit 1
         fi
 
-    - name: Upload artifact
+    - name: Upload artifact for Pages
       uses: actions/upload-pages-artifact@v3
       with:
+        path: ${{ steps.detect-output.outputs.path }}
+
+    - name: Upload debug artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: build-debug-${{ github.run_id }}
         path: ${{ steps.detect-output.outputs.path }}
         
     - name: Deploy to GitHub Pages
