--- a/.github/workflows/deploy-alternative.yml
+++ b/.github/workflows/deploy-alternative.yml
@@ -1,65 +1,64 @@
-name: Deploy to GitHub Pages (Alternative)
+name: Deploy to GitHub Pages
 
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-          
-      - name: Install dependencies
-        run: npm ci
-        
-      - name: Build
-        run: npm run build
-        
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: github-pages
-          path: './dist'
+    
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
 
-  deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
+    
     steps:
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
+    - name: Checkout
+      uses: actions/checkout@v4
+      
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+        cache: 'npm'
         
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: github-pages
-          path: './dist'
-          
-      - name: Upload to GitHub Pages
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: './dist'
-          
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+    - name: Install dependencies
+      run: npm ci
+      
+    - name: Build
+      run: npm run build
+      
+    - name: Setup Pages
+      uses: actions/configure-pages@v4
+
+    - name: Detect build output
+      id: detect-output
+      run: |
+        if [ -d "./dist" ]; then
+          echo "path=./dist" >> $GITHUB_OUTPUT
+        elif [ -d "./build" ]; then
+          echo "path=./build" >> $GITHUB_OUTPUT
+        else
+          echo "No dist or build folder found!"
+          exit 1
+        fi
+
+    - name: Upload artifact for Pages
+      uses: actions/upload-pages-artifact@v3
+      with:
+        path: ${{ steps.detect-output.outputs.path }}
+
+    - name: Upload debug artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: build-debug-${{ github.run_id }}
+        path: ${{ steps.detect-output.outputs.path }}
+        
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v4
