--- a/.github/workflows/deploy-alternative.yml
+++ b/.github/workflows/deploy-alternative.yml
@@ -51,13 +51,13 @@ jobs:
     - name: Upload artifact for Pages
       uses: actions/upload-pages-artifact@v4
       with:
-        path: ${{ steps.detect-output.outputs.path }}
+        path: './dist'
 
     - name: Upload debug artifact
       uses: actions/upload-artifact@v4
       with:
         name: build-debug-${{ github.run_id }}
-        path: ${{ steps.detect-output.outputs.path }}
+        path: './dist'
         
     - name: Deploy to GitHub Pages
       id: deployment
